data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1983.wast
;; 4. **Test Description**: Use a `br_if` instruction to conditionally call an exported function from another module within an `if` statement, and check if the stack state is preserved correctly.    - **Constraint Checked**: Correctly validating stack preservation after conditional function calls across module boundaries.    - **Relation to Control Flow**: Ensures that the stack's integrity is maintained when conditionally moving control flow across module boundaries.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc))
    (func
      (block
        (i32.const 1)
        (if (result i32)
          (then (br_if 0 (call $externalFunc)))
        )
      )
    )
  )
  "type mismatch"
)